<resources>
    <string name="app_name">VotingClient</string>
    <string name="create_poll_title">Create new poll</string>
    <string name="poll_name_hint">Poll name</string>
    <string name="expire_time_hint">Pick expire time</string>
    <string name="candidate_name_hint">Candidate name</string>
    <string name="ballot_id_hint">Enter your ballot ID for the vote</string>
    <string name="enter_ballot_id">Please enter your ballot ID for the vote.</string>
    <string name="enter_name">Please enter a name for the poll.</string>
    <string name="pick_expire_time">Please pick an expire time for the poll.</string>
    <string name="enter_candidate">Please enter a candidate value.</string>
    <string name="vote">Vote</string>
    <string name="already_voted">You have already voted on this poll.</string>
    <string name="not_eligible">You are not eligible to vote on this poll.</string>
    <string name="no_polls">There is no poll to show.</string>
    <string name="saved_to_clipboard">Saved to clipboard</string>
    <string name="enter_commitment_secret">Enter your commitment secret for the vote</string>
    <string name="vote_choice_hint">Enter your vote choice</string>
    <string name="enter_vote_choice">Please enter your vote choice for this poll.</string>
    <string name="vote_counted">Ballot opened successfully. Vote counted.</string>
    <string name="vote_not_valid">Your vote was NOT valid.</string>
    <string name="already_open">This ballot has been opened before.</string>
    <string name="wrong_ballot_id">Wrong ballot ID.</string>
    <string name="wrong_commitment_secret">Wrong commitment secret.</string>

    <string name="authentication_success">Successfully authenticated at authority.</string>
    <string name="authentication_failure">Failed authentication at authority.</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="authority_client_id">1038869177199-v7tkrec204t60tfjkufdn8ngguqg8ha5.apps.googleusercontent.com</string>
    <string name="counter_timeout">Counter timeout.</string>
    <string name="authority_timeout">Authority timeout.</string>
    <string name="please_sign_in">Please sign in first.</string>
    <string name="please_select_candidate">Please select a candidate.</string>
    <string name="invalid_signature">Invalid signature.</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="signature_rejected">Authority\'s signature rejected by counter.</string>
    <string name="poll_not_found">Poll was not found. Casting vote unsuccessful.</string>
    <string name="poll_expired">Poll has expired. Casting vote unsuccessful.</string>
    <string name="vote_cast_success">Vote cast was successful.</string>
    <string name="create">Create</string>
    <string name="vote_info_alert_title">Your information for the vote are:</string>
    <string name="vote_info_alert_bottom">Please write these down somewhere. You will need them later.</string>
    <string name="polls">Polls</string>
    <string name="log_out">Log Out</string>
    <string name="votes">Votes</string>
    <string name="poll_name_cannot_contain">Poll name cannot contain \';\' character.</string>
    <string name="save_vote_secret">Save vote secret on device</string>
    <string name="vote_secret_not_saved">Vote secret was NOT saved to storage.</string>
    <string name="vote_cast_failure">Failed vote casting operation.</string>
    <string name="vote_save_failure">Failed saving vote to storage.</string>
</resources>
